--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "@mdi/font": "5.9.55",
+    "core-js": "^3.6.5",
+    "roboto-fontface": "*",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
+    "vue": "^3.2.30",
+    "vue-router": "^4.0.12",
+    "vuetify": "^3.0.0-alpha.12"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -21,6 +27,7 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vue-cli-plugin-vuetify": "~2.4.0"
   }
 }
